refactor: reorganize imports and improve code structure